Merged with Kuba changes